--- a/.github/workflows/powershell-analysis.yml
+++ b/.github/workflows/powershell-analysis.yml
@@ -15,7 +15,7 @@ on:
   pull_request:
     branches: [ main ]
   schedule:
-    - cron: '44 9 * * 6'
+    #- cron: '44 9 * * 6'
     
 jobs:
   build:
