Added a sample comment
Added a sample comment - Just to check hoe the suggestions work as contributor.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,7 @@
 
 #name: $(TaskName)Task_$(Major).$(rev:r).$(Patch)_$(TaskName)  # build numbering format
 name: $(Major).$(Minor).$(Patch)  # build numbering format
+# I think the pipeline should also have a name to it for extensions
 
 
 trigger:
