--- a/ADOLicenseManagementTask/ADOLicenseManagement/package.json
+++ b/ADOLicenseManagementTask/ADOLicenseManagement/package.json
@@ -5,7 +5,7 @@
     "build": "npm run clean && npm run lint && npm run transpile",
     "package": "npm prune --production && npm run copy",
     "copy": "ncp ./node_modules ./task/node_modules && ncp ./dist/src ./task",
-    "clean": "rimraf ./dist/src && rimraf ./dist/test && rimraf ./task/*.js && rimraf ./task/*.js.map && rimraf ./task/node_modules",
+    "clean": "del-cli ./dist/src ./dist/test ./task/*.js ./task/*.js.map ./task/node_modules",
     "transpile": "tsc -p ./",
     "lint": "eslint src/*.ts test/*.ts",
     "test": "mocha -r ts-node/register ./test/*.test.ts --reporter mocha-junit-reporter --reporter-options mochaFile=./test-output/test-results.xml",
