--- a/ADOLicenseManagementTask/ADOLicenseManagement/package.json
+++ b/ADOLicenseManagementTask/ADOLicenseManagement/package.json
@@ -3,36 +3,39 @@
   "description": "Task Wrapper To Load on non Windows OS",
   "scripts": {
     "build": "npm run clean && npm run lint && npm run transpile ",
-    "package": "npm prune -production && npm run copy",
+    "package": "npm prune --production && npm run copy",
     "copy": "ncp ./node_modules ./task/node_modules && ncp ./dist/src ./task",
     "clean": "rimraf ./dist/src && rimraf ./dist/test && rimraf ./task/*.js && rimraf ./task/*.js.map && rimraf ./task/node_modules",
     "transpile": "tsc -p ./",
-    "lint": "tslint -c tslint.json src/*.ts test/*.ts",
+    "lint": "eslint src/*.ts test/*.ts",
     "test": "mocha -r ts-node/register ./test/*.test.ts --reporter mocha-junit-reporter --reporter-options mochaFile=./test-output/test-results.xml ",
     "test-no-logger": "mocha -r ts-node/register ./test/*.test.ts "
   },
   "main": "test.js",
   "dependencies": {
-    "azure-devops-node-api": "^8.0.0",
-    "azure-pipelines-task-lib": "^3.1.2",
-    "fs": "0.0.1-security",
+    "azure-devops-node-api": "^12.0.0",
+    "azure-pipelines-task-lib": "^4.0.0",
+    "fs": "^0.0.1-security",
     "ncp": "^2.0.0",
-    "rimraf": "^2.7.1",
-    "vsts-task-lib": "^2.7.0"
+    "rimraf": "^5.0.5",
+    "vsts-task-lib": "^2.9.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.4",
-    "@types/mocha": "^2.2.44",
-    "@types/node": "^15.12.2",
-    "chai": "^3.5.0",
-    "del": "^4.0.0",
-    "mocha": "^8.3.2",
-    "mocha-junit-reporter": "^1.15.0",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.9.1",
-    "typescript": "^3.5.3",
+    "@types/chai": "^4.3.10",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^22.2.3",
+    "chai": "^4.3.10",
+    "del": "^7.0.0",
+    "eslint": "^8.56.0",
+    "mocha": "^10.2.0",
+    "mocha-junit-reporter": "^2.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.4.5",
     "typings": "^2.1.1"
   },
   "author": "Aammir Mirza",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=22.0.0"
+  }
 }
