--- a/ADOLicenseManagementTask/ADOLicenseManagement/package.json
+++ b/ADOLicenseManagementTask/ADOLicenseManagement/package.json
@@ -17,8 +17,7 @@
     "azure-pipelines-task-lib": "^4.0.0",
     "fs": "^0.0.1-security",
     "ncp": "^2.0.0",
-    "rimraf": "^5.0.5",
-    "vsts-task-lib": "^2.9.0"
+    "rimraf": "^5.0.5"
   },
   "devDependencies": {
     "@types/chai": "^4.3.10",
