--- a/ADOLicenseManagementTask/ADOLicenseManagement/package.json
+++ b/ADOLicenseManagementTask/ADOLicenseManagement/package.json
@@ -2,14 +2,14 @@
   "name": "taskwrapper",
   "description": "Task Wrapper To Load on non Windows OS",
   "scripts": {
-    "build": "npm run clean && npm run lint && npm run transpile ",
+    "build": "npm run clean && npm run lint && npm run transpile",
     "package": "npm prune --production && npm run copy",
     "copy": "ncp ./node_modules ./task/node_modules && ncp ./dist/src ./task",
-    "clean": "rimraf ./dist/src && rimraf ./dist/test && rimraf ./task/*.js && rimraf ./task/*.js.map && rimraf ./task/node_modules",
+    "clean": "del ./dist/src && del ./dist/test && del ./task/*.js && del ./task/*.js.map && del ./task/node_modules",
     "transpile": "tsc -p ./",
     "lint": "eslint src/*.ts test/*.ts",
-    "test": "mocha -r ts-node/register ./test/*.test.ts --reporter mocha-junit-reporter --reporter-options mochaFile=./test-output/test-results.xml ",
-    "test-no-logger": "mocha -r ts-node/register ./test/*.test.ts "
+    "test": "mocha -r ts-node/register ./test/*.test.ts --reporter mocha-junit-reporter --reporter-options mochaFile=./test-output/test-results.xml",
+    "test-no-logger": "mocha -r ts-node/register ./test/*.test.ts"
   },
   "main": "test.js",
   "dependencies": {
