--- a/ADOLicenseManagementTask/ADOLicenseManagement/package.json
+++ b/ADOLicenseManagementTask/ADOLicenseManagement/package.json
@@ -5,7 +5,7 @@
     "build": "npm run clean && npm run lint && npm run transpile",
     "package": "npm prune --production && npm run copy",
     "copy": "ncp ./node_modules ./task/node_modules && ncp ./dist/src ./task",
-    "clean": "del ./dist/src && del ./dist/test && del ./task/*.js && del ./task/*.js.map && del ./task/node_modules",
+    "clean": "node clean.js",
     "transpile": "tsc -p ./",
     "lint": "eslint src/*.ts test/*.ts",
     "test": "mocha -r ts-node/register ./test/*.test.ts --reporter mocha-junit-reporter --reporter-options mochaFile=./test-output/test-results.xml",
@@ -23,18 +23,21 @@
     "@types/chai": "^4.3.10",
     "@types/mocha": "^10.0.1",
     "@types/node": "^22.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
+    "@typescript-eslint/parser": "^8.44.0",
     "chai": "^4.3.10",
     "del": "^7.0.0",
+    "del-cli": "^5.0.0",
     "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "mocha-junit-reporter": "^2.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.4.5",
-    "typings": "^2.1.1"
+    "typescript": "^5.4.5"
   },
   "author": "Aammir Mirza",
   "license": "MIT",
   "engines": {
     "node": ">=22.0.0"
-  }
+  },
+  "type": "module"
 }
