--- a/YAMLTemplates/publish-extension.yml
+++ b/YAMLTemplates/publish-extension.yml
@@ -8,9 +8,9 @@ parameters:
   type: string
 
 steps:
-- task: TfxInstaller@3
+- task: TfxInstaller@5
   inputs:
-    version: 'v0.8.x'
+    version: 'latest'
 
 - task: ms-devlabs.vsts-developer-tools-build-tasks.publish-extension-build-task.PublishAzureDevOpsExtension@3
   displayName: 'Publish Extension'
